[package]
name = "stm32wba55cg"
version = "0.1.0"
edition = "2021"

[dependencies]
# stm32-metapac = "16.0.0"

# embassy dependencies
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-stm32", branch = "main", features = ["defmt", "stm32wba55cg", "time-driver-any", "memory-x", "exti"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-sync", branch = "main", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor", branch = "main", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-time", branch = "main", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

# Debugging and logging dependencies
defmt = "0.3"
defmt-rtt = "0.4"

# Cortex-M dependencies
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", optional = false }
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2"

# Optional allocator support
embedded-alloc = "0.5.0"

# stm32wba55-pac = { path = "/home/elopezpe/stm32wba55-pac", version = "0.1.0", features = ["rt", "critical-section"] }
stm32wba = { path = "/home/elopezpe/stm32-rs/stm32wba", version = "0.1.0", features = ["rt", "critical-section", "stm32wba55"] }

